--- a/simplemenu/output/RG-350/section_groups/home computers.ini
+++ b/simplemenu/output/RG-350/section_groups/home computers.ini
@@ -2,9 +2,9 @@
 consoleList =ZX SPECTRUM,MSX,COMMODORE 64,AMSTRAD CPC,ATARI 800,ATARI ST,AMIGA,PICO-8
 
 [PICO-8]
-execs = /media/data/apps/pico8.opk
-romDirs = /media/sdcard/ROMS/ZXSPECTRUM/
-romExts = .tzx,.zip,.sna
+execs = /media/data/apps/tac08.opk
+romDirs = /media/sdcard/ROMS/PICO-8/
+romExts = .png
 
 [ZX SPECTRUM]
 execs = /media/data/apps/unreal_speccy_portable.opk
